--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ httpx = "^0.25.2"
 redis = "^5.0.1"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 python-multipart = "^0.0.6"
+psycopg2-binary = "^2.9.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
